--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,11 @@ line-length = 120
 # Also ignore `E402` in all `__init__.py` files.
 "__init__.py" = ["E402", "F401", "F403", "E501"]
 
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+]
+
 [tool.ruff.lint]
 extend-select = ["UP"]
 ignore = [
