--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@ MANIFEST
 # Datasets
 data/
 
+# Profiler output
+profile.html
+profile.json
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
