--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dev = [
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.3",
+    "ruff>=0.12.2",
     "scalene>=1.5.51",
     "sortedcontainers>=2.4.0",
 ]
