--- a/tuning_config.toml
+++ b/tuning_config.toml
@@ -1,8 +1,8 @@
 [tuning]
 enabled = true
 output_dir = "output/tuning"
-num_tune_samples = 4
-gpus_per_trial = 0.4
+num_tune_samples = 20
+gpus_per_trial = 0.3
 num_cpus_per_trial = 4
 max_iterations = 10
 
@@ -11,13 +11,13 @@ output_dir = "output/checkpoints"
 context_length = 256
 train_batch_size = 32
 eval_batch_size = 32
-num_iterations = 100
-eval_num_batches = 10
+num_iterations = 40000
+eval_num_batches = 600
 save_steps = -1
-eval_steps = 10
-logging_steps = 10
+eval_steps = 1000
+logging_steps = 500
 device = "cuda"
-debug_fixed_minibatch = true
+debug_fixed_minibatch = false
 random_seed = 42
 
 [model]
@@ -37,7 +37,7 @@ eps = 1e-9
 
 [optimizer.lr_scheduler_config]
 cls = "CosineLRScheduler"
-warmup_iters = 0
-cosine_cycle_iters = 100
+warmup_iters = 100
+cosine_cycle_iters = 10000
 min_lr = 1e-5
 max_lr = 1e-2
