--- a/tuning_config.toml
+++ b/tuning_config.toml
@@ -12,9 +12,11 @@ context_length = 256
 train_batch_size = 32
 eval_batch_size = 32
 num_iterations = 5000
-eval_num_batches = 200
+# eval_num_batches = 200
+eval_num_batches = 10
 save_steps = -1
-eval_steps = 400
+# eval_steps = 400
+eval_steps = 10
 logging_steps = 200
 device = "cuda"
 debug_fixed_minibatch = false
