--- a/tuning_config.toml
+++ b/tuning_config.toml
@@ -1,10 +1,11 @@
 [tuning]
 enabled = true
 output_dir = "output/tuning"
-num_tune_samples = 20
+num_tune_samples = 30
 gpus_per_trial = 0.33
 num_cpus_per_trial = 4
 max_iterations = 10
+max_concurrent_trials = 9
 
 [training]
 output_dir = "output/checkpoints"
@@ -12,11 +13,13 @@ context_length = 256
 train_batch_size = 32
 eval_batch_size = 32
 num_iterations = 5000
-# eval_num_batches = 200
-eval_num_batches = 10
+eval_num_batches = 200
+# for debugging
+# eval_num_batches = 10
 save_steps = -1
-# eval_steps = 400
-eval_steps = 10
+eval_steps = 400
+# for debugging
+# eval_steps = 20
 logging_steps = 200
 device = "cuda"
 debug_fixed_minibatch = false
